update api users
