# docs/swagger/swagger.json
@@ -18,6 +18,61 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
+        "/users": {
+            "get": {
+                "description": "get user records",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get user records",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "cols",
+                        "name": "cols",
+                        "in": "path"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "path"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page_size",
+                        "name": "page_size",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/usersGetResponse"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/context.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "description": "get string by ID",
@@ -36,6 +91,12 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "cols",
+                        "name": "cols",
+                        "in": "path"
                     }
                 ],
                 "responses": {
@@ -50,21 +111,21 @@
                         "description": "Bad Request",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/e.ResponseErr"
+                            "$ref": "#/definitions/context.Response"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/e.ResponseErr"
+                            "$ref": "#/definitions/context.Response"
                         }
                     },
                     "501": {
                         "description": "Not Implemented",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/e.ResponseErr"
+                            "$ref": "#/definitions/context.Response"
                         }
                     }
                 }
@@ -72,12 +133,16 @@
         }
     },
     "definitions": {
-        "e.ResponseErr": {
+        "context.Response": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer",
                     "example": 400
+                },
+                "errors": {
+                    "type": "string",
+                    "example": "{array}"
                 },
                 "msg": {
                     "type": "string",
@@ -85,7 +150,7 @@
                 }
             }
         },
-        "s_user.User": {
+        "user.User": {
             "type": "object",
             "properties": {
                 "created": {
